using now node's async_hooks instead of cls library so that context doesn't get lost after mongoose queries (mongoose doesn't work with cls)

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "keywords": ["mongoose"],
   "author": "BabuSrithar",
   "dependencies": {
-    "continuation-local-storage":"3.1.7",
-    "mongoose":"5.7.8"
   },
   "devDependencies": {
-
+  },
+  "peerDependencies": {
+    "mongoose":"^5.7.8"
   },
   "main": "index.js",
   "scripts": {
